# tate-embeddings

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AI_CONTEXT.md  Dockerfile  Makefile  README.md  TICKET-TSE-74.md  Tate-Embeddings.postman_collection.json  pyproject.toml  railway.json
app/: __init__.py  auth.py  config.py  embeddings.py  main.py  models.py
tests/: __init__.py  conftest.py  test_auth.py  test_endpoints.py
